# AgentGraph

./: .dockerignore  .gitignore  AGENTS.md  AGENT_GRAPH.md  AGENT_RUNTIME_REPOS.md  ALL_FRAMEWORKS.md  BEST_PRACTICES.md  BOLT_NEW_INTEGRATION.md  BOLT_NEW_PROMPT.md  BUILDER_COVERAGE.md  CLOUD_PROVIDERS.md  COMPLIANCE_MAPPING.md  CONNECTION_MAP.md  CONTRIBUTING.md  DATABASE_SOURCES.md  DOCKERIZE.md  DOCKER_README.md  Dockerfile  Dockerfile.platform  FEATURES.md  GOVERNANCE_PROTOCOLS.md  LANGGRAPH_UX.md  LANGGRAPH_WORKFLOW.md  LICENSE  LINUX_INSIGHTS.md  MULTI_AGENT_TEAM.md  PLAYBOOK.md  POST_DEPLOYMENT.md  PRE_DEPLOYMENT.md  PRODUCTION_CHECKLIST.md  PROJECTS.md  README.md  RELEASE.md  REPO_LAYOUT.md  RUNTIME_REPOS.md  SCHEMA_ALIGNMENT.md  SCHEMA_COVERAGE.md  SCHEMA_FULL_MAPPING.md  SCHEMA_ORG_MAPPING.md  SCHEMA_PROPERTIES.md  (+109 more)
.github/: dependabot.yml
a2a/: __init__.py  card.py  client.py  messages.py  protocol.py
agennext/: __init__.py  runtime_api.py
agennext-ui/: .env.production.template  .gitignore  Dockerfile  README.md  SPEC.md  middleware.ts  next.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo
agent-platform/: README.md  protocol-registry.md  source-org-inventory.md
agent_graph_sdk/: __init__.py  client.py  models.py
agent_graph_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agentnext/: __init__.py  a2a.py  adk_ui.py  agents.py  providers.py  ui.py  ui_agents.py  ui_framework.py
agents/: __init__.py  anthropic_agent.py  autogen_agent.py  azure_ai_foundry_agent.py  base_agent.py  coordinator.py  crewai_agent.py  docker_agent.py  github_agent.py  google_agent.py  langchain_agent.py  langchain_client.py  langgraph_client.py  llamaindex_agent.py  microsoft_agent.py  openai_agent.py  openhands_agent.py  providers.py  roles.py  salesforce_agent.py  salesforce_client.py  snowflake_agent.py
core/: __init__.py  router.py  (+6 more)
(+375 files in other folders)
