[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "content-writing-team"
version = "0.1.0"
description = "Multi-Agent Content Writing Team with A2A Protocol"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "pydantic>=2.6.0",
    "aiohttp>=3.9.0",
    "openai>=1.35.0",
    "google-generativeai>=0.8.0",
    "azure-ai-openai>=0.2.0",
    "simple-salesforce>=1.2.0",
    "surrealdb>=1.0.0",
]

[project.scripts]
content-team = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.hatch.build.targets.wheel]
packages = ["."]
