[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-graph-sdk"
version = "0.1.0"
description = "Python SDK for the Agent-Graph API"
readme = "README.md"
license = "LicenseRef-OpenAutonomyx-All-Rights-Reserved"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_graph_sdk*"]
